# template

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-ru.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  playbook-sync.yml  release.yml  security.yml
docker/: Dockerfile
docs/: index.md
docs/architecture/: SYSTEM.md
docs/architecture/ADR/: ADR-000-template.md
docs/development/: DEVELOPMENT_STANDARD.md  PLAYBOOK_MARKERS.md  WSL_DEV.md
scripts/: extract_playbook.py  init_template.py
src/projectname/: __init__.py  cli.py  config.py
src/projectname/observability/: __init__.py  sentry.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_config.py  test_sentry.py
tools/: check_instrumentation.py
