[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectname"
version = "0.2.0"
description = "TODO: one-line project description."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergey Khlebnikov", email = "you@example.com" }]
keywords = ["python", "ai", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sentry-sdk>=2.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.16",
    "pyright>=1.1.410",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "commitizen>=3.27",
]

[project.urls]
Homepage = "https://github.com/hleserg/projectname"
Repository = "https://github.com/hleserg/projectname"
Issues = "https://github.com/hleserg/projectname/issues"

[project.scripts]
projectname = "projectname.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/projectname"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["projectname"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests (may touch external services)",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/projectname"]
omit = ["src/projectname/cli.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
version_files = ["pyproject.toml:version", "src/projectname/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
